--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@stripe/stripe-js": "^4.9.0",
     "@tailwindcss/typography": "^0.5.15",
@@ -30,6 +31,7 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
+    "next-themes": "^0.4.3",
     "openai": "^4.72.0",
     "prisma": "^5.22.0",
     "react": "^18",
@@ -39,6 +41,7 @@
     "react-markdown": "^9.0.1",
     "react-number-format": "^5.4.2",
     "recharts": "^2.13.3",
+    "sonner": "^1.7.0",
     "stripe": "^17.3.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
